se agregaron botones para agregar y eliminar permisos

--- a/SGI/SGI.UI/Components/Pages/GestionDeUsuario.razor
+++ b/SGI/SGI.UI/Components/Pages/GestionDeUsuario.razor
@@ -43,6 +43,12 @@
                         <button class="btn btn-primary" @onclick="() => EditarUsuario(usuario)">
                             Editar
                         </button>
+                        <button class="btn btn-primary" >
+                            Agregar Permiso
+                        </button>
+                        <button class="btn btn-primary">
+                            Eliminar Permiso
+                        </button>
                     </td>
                 </tr>
             }
