--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -53,8 +53,13 @@
         {
             <!-- Enlace Iniciar sesión -->
             <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Registrarse">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Registrarse
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="IniciarSesion">
-                    <span class="bi bi-person-circle" aria-hidden="true"></span> Iniciar Sesión
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Iniciar Sesión
                 </NavLink>
             </div>
         }
@@ -62,16 +67,16 @@
         {
             <!-- Botón Cerrar sesión (sin la clase nav-link) -->
             <div class="nav-item px-3">
-                <NavLink class="btn btn-danger me-2" href="CerrarSesion" style="text-align: center;">
-                    <span class="bi bi-person-circle" aria-hidden="true"></span> Cerrar sesion
+                <NavLink class="nav-link" href="ModificarMisDatos">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ModificarMisDatos
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="CerrarSesion" style="text-align: center;background-color: rgba(255, 0, 0, 0.522);">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Cerrar sesion
                 </NavLink>
             </div>
         }
-        <div class="nav-item px-3">
-                <NavLink class="nav-link" href="Registrarse">
-                    <span class="bi bi-person-circle" aria-hidden="true"></span> Registrarse
-                </NavLink>
-        </div>
     </nav>
 </div>
 
